--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         align-items: center;
         background-color: black;
         color: white;
-        overflow: hidden; /* Para evitar que o botão saia da tela */
     }
 
     #text {
@@ -52,6 +51,7 @@
     #mobile-warning {
         font-size: 36px;
         color: red;
+        display: none;
     }
     
     @keyframes changeColor {
